# crime_sp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-pipeline.txt  requirements.txt
.github/workflows/: deploy.yml  keepalive.yml  pipeline.yml
.streamlit/: config.toml  secrets.toml.example
app/: main.py
app/pages/: 01_estatisticas.py  02_comparativo.py  02_sobre.py  03_qualidade.py  04_sobre.py
dags/: crime_sp.py
pipeline/: bairro_aliases.csv  bairros.py  download.py  transform.py  upload.py
queries/: comparativo_bairros.sql  comparativo_mensal.sql  detalhes.sql  estatisticas.sql  mapa.sql  particoes.sql  qualidade.sql  qualidade_bairros.sql
src/: charts.py  data.py  ui.py
tests/: conftest.py  test_bairros.py  test_transform.py  test_upload.py
