[project]
name = "crime-data-sp"
version = "0.1.0"
description = "Data app de celulares subtraidos na cidade de Sao Paulo"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "fastexcel>=0.11",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "boto3>=1.34",
    "duckdb>=1.0",
    "streamlit>=1.36",
    "folium>=0.17",
    "streamlit-folium>=0.22",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
